feat: novo commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Esta é a primeira versão do arquivo de exemplo</h1>
-    <p>Aqui temos o texto exemplo do arquivo de exemplo.</p>
+    <p>Aqui temos o texto exemplo do arquivo de exemplo. (este texto foi inserido)</p>
+    <p>Aqui temos um texto que foi adicionado mais tarde</p>
 </body>
 </html>
