feat: imagem de cerejeira adicionada ao projeto, junto com a referencia na tag

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Esta é a primeira versão do arquivo de exemplo</h1>
     <p>Aqui temos o texto exemplo do arquivo de exemplo. (este texto foi inserido)</p>
     <p>Aqui temos um texto que foi adicionado mais tarde</p>
+    <img src="images/cerejeira.jpg" alt="Imagem de Uma Cerejeira">
 </body>
 </html>
